# unimrcp-1.6

plugins/: Makefile.am
plugins/alicloud-recog/: CMakeLists.txt  Makefile.am
plugins/alicloud-recog/src/: alicloud_recog_engine.cpp
plugins/alicloud-synth/src/: alicloud_synth_engine.c
plugins/xfyun-synth/src/: xfyun_synth_engine.c
